<resources>
    <string name="app_name">Snake Sneaker</string>
    <string name="nav_title">Admin - 0983898904</string>
    <string name="nav_sub_title">View Profile ></string>
    <string name="scheme">https</string>
    <string name="host">snakesneaker.com.vn/</string>
    <string name="pathPrefix">/product/</string>
    <string name="deep_link_compare">https://snakesneaker.com.vn/</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="isRTL">false</string>
    <string name="admob_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="facebook_app_id">xxxxxxxxxxxxxxxx</string>
    <string name="fb_login_protocol_scheme">xxxxxxxxxxxxxxxx</string>
    <string name="play_more_app"></string>
    <string name="home">Trang chủ</string>
    <string name="category">Thể Loại</string>
    <string name="wish_list">Yêu thích</string>
    <string name="my_order">Đơn Hàng Của Tôi</string>
    <string name="my_order_detail">Chi tiết Đơn hàng của tôi</string>
    <string name="order_tracking">Theo dõi đơn hàng</string>
    <string name="profile">Hồ Sơ</string>
    <string name="edit_profile">Chỉnh sửa hồ sơ</string>
    <string name="offers">Ưu Đãi</string>
    <string name="rate_app">Đánh giá ứng dụng</string>
    <string name="more_app">More App</string>
    <string name="share_app">Share App</string>
    <string name="about_us">Về chúng tôi</string>
    <string name="privacy_policy">Chính sách bảo mật</string>
    <string name="terms_condition">Điều kiện điều khoản</string>
    <string name="setting">Cài đặt</string>
    <string name="login">Đăng nhập</string>
    <string name="action_logout">Đăng xuất</string>
    <string name="add_address">Thêm địa chỉ</string>
    <string name="today_deal">Today deal</string>
    <string name="latest_products">Sản phẩm mới nhất</string>
    <string name="top_rated_products">Sản phẩm được xếp hạng cao nhất</string>
    <string name="app_name_about_us">abcd</string>
    <string name="about_us_version">Phiên bản</string>
    <string name="about_us_version_text">1.0</string>
    <string name="about_us_author">Author</string>
    <string name="about_us_member">Thành viên</string>
    <string name="about_us_company_name">abcd</string>
    <string name="about_us_email">Email</string>
    <string name="about_us_email_text">abcd@abcd.com</string>
    <string name="about_us_website">Website</string>
    <string name="about_us_website_text">www.abcd.com</string>
    <string name="about_us_contact">Contact</string>
    <string name="about_us_contact_text">123456789</string>
    <string name="about_us_about">Giới thiệu</string>
    <string name="yes">Đúng</string>
    <string name="no">Không</string>
    <string name="ok">Đồng ý</string>
    <string name="loading">Đang tải....</string>
    <string name="failed_try_again">Không thành công, thử lại</string>
    <string name="wrong">Đã xảy ra lỗi, vui lòng thử lại sau</string>
    <string name="internet_connection">Kết nối Internet không khả dụng</string>
    <string name="upload_folder_error">Chọn từ trình quản lý tệp thì nó sẽ hoạt động</string>
    <string name="Please_click_BACK_again_to_exit">Vui lòng bấm QUAY LẠI một lần nữa để thoát</string>
    <string name="Let_me_recommend_you_this_application">Hãy để tôi giới thiệu cho bạn ứng dụng này</string>
    <string name="storage_permission">Vui lòng cho phép quyền lưu trữ</string>
    <string name="info"> </string>
    <string name="lorem"> </string>
    <string name="welcome_back">Chào mừng trở lại!</string>
    <string name="sign_into_continue">Đăng nhập để tiếp tục</string>
    <string name="sign_up_to_continue">Đăng ký để tiếp tục</string>
    <string name="signUp">Đăng ký</string>
    <string name="register">Đăng ký</string>
    <string name="logout">Đăng xuất</string>
    <string name="email">Email</string>
    <string name="remember_me">Ghi nhớ</string>
    <string name="button_text_login">ĐĂNG NHẬP</string>
    <string name="button_text_register">ĐĂNG KÝ</string>
    <string name="button_text_forgot_password">QUÊN MẬT KHẨU ?</string>
    <string name="google_login">Gmail Đăng nhập</string>
    <string name="facebook_login">Facebook</string>
    <string name="terms_title">Tôi đã đọc và đồng ý với điều khoản</string>
    <string name="terms_of_use"><u>Điều khoản sử dụng</u></string>
    <string name="already_have_an_account_yet">Đã có tài khoản?</string>
    <string name="dont_have_an_account_yet">Vẫn chưa có tài khoản?</string>
    <string name="forget_password_text">Nhập địa chỉ email của bạn vào bên dưới và chúng tôi sẽ gửi cho bạn email kèm theo hướng dẫn về cách thay đổi mật khẩu của bạn</string>
    <string name="register_login_text"><u>Đăng nhập</u></string>
    <string name="submit">Nộp</string>
    <string name="password">Mật khẩu</string>
    <string name="old_password">Mật khẩu cũ</string>
    <string name="conform_password">Mật khẩu phù hợp</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="new_conform_password">Nhập lại mật khẩu</string>
    <string name="please_enter_email">Vui lòng nhập email</string>
    <string name="please_enter_password">Xin vui lòng nhập mật khẩu</string>
    <string name="please_enter_old_password">Vui lòng nhập mật khẩu cũ</string>
    <string name="please_enter_new_password">Vui lòng nhập mật khẩu mới</string>
    <string name="please_enter_confirm_password">Vui lòng nhập mật khẩu xác nhận</string>
    <string name="please_enter_new_confirm_password">Vui lòng nhập mật khẩu xác nhận mới</string>
    <string name="please_select_terms">Vui lòng chọn tùy chọn điều khoản và điều kiện</string>
    <string name="name">Tên</string>
    <string name="phoneNo">Số điện thoại</string>
    <string name="please_enter_phone">Vui lòng nhập số điện thoại</string>
    <string name="please_enter_name">Vui lòng nhập tên</string>
    <string name="password_not_match">Mật khẩu và mật khẩu xác nhận không khớp</string>
    <string name="new_password_not_match">Mật khẩu mới và mật khẩu xác nhận mới không khớp</string>
    <string name="button_text_skip"><u>Bỏ qua</u></string>
    <string name="forget_password">Quên mật khẩu?</string>
    <string name="you_have_not_login">Bạn chưa đăng nhập</string>
    <string name="verify">kiểm chứng</string>
    <string name="enter_code">Nhập mã</string>
    <string name="click_hear"><u>Bấm vào đây</u></string>
    <string name="re_register">Đăng ký lại</string>
    <string name="resend_verification_not">Bạn có chắc chắn muốn gửi lại mã xác minh không?</string>
    <string name="resend_your_otp">Gửi lại OTP của bạn</string>
    <string name="opt_contain">Chúng tôi đã gửi OTP qua email của bạn</string>
    <string name="title_verification">Nhập mã xác nhận</string>
    <string name="verification_message">Mã xác minh không khớp</string>
    <string name="please_enter_verification_code">Vui lòng nhập mã xác nhận</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="enable_push_notification">Bật thông báo</string>
    <string name="size">Kích thước</string>
    <string name="send">Gửi</string>
    <string name="welcome_title_one">Chào Mừng</string>
    <string name="welcome_description_one">Snake là nền tảng mua sắm dày trực tuyến cao cấp dành cho mọi người</string>
    <string name="welcome_title_two">Khám phá sản phẩm</string>
    <string name="welcome_description_two">Tìm kiếm mới nhất và nổi bật với giá tốt nhất</string>
    <string name="welcome_title_three">Thêm vào giỏ hàng</string>
    <string name="welcome_description_three">Thêm vào giỏ hàng Tất cả sản phẩm bạn cần và thanh toán đơn hàng</string>
    <string name="skip">Bỏ qua</string>
    <string name="got_it">Hiểu rồi</string>
    <string name="next">Tiếp theo</string>
    <string name="view_all">Xem tất cả</string>
    <string name="select_size">Kích thước</string>
    <string name="buy_now">MUA NGAY</string>
    <string name="add_to_cart">THÊM VÀO GIỎ HÀNG</string>
    <string name="no_data">Không tìm thấy dữ liệu nào</string>
    <string name="no_data_wistList">Danh sách mong muốn của bạn đang trống!</string>
    <string name="description">Mô tả</string>
    <string name="remove">Loại bỏ</string>
    <string name="pinCode">Mã bưu điện</string>
    <string name="houseName">Số nhà, Tên tòa nhà</string>
    <string name="roadName">Tên đường , Khu vực.</string>
    <string name="countryIF">Quốc gia</string>
    <string name="city">Thành phố</string>
    <string name="state">Trạng thái</string>
    <string name="landmark">Mốc (tùy chọn)</string>
    <string name="alterNate_phoneNo">Số điện thoại thay thế (tùy chọn)</string>
    <string name="district">Quận (tùy chọn)</string>
    <string name="please_enter_pinCode">Vui lòng nhập mã pin</string>
    <string name="please_enter_houseName">Vui lòng nhập số nhà và tên tòa nhà</string>
    <string name="please_enter_city">Vui lòng nhập thành phố</string>
    <string name="please_enter_state">Vui lòng nhập trạng thái</string>
    <string name="please_enter_roadName">Vui lòng nhập tên đường và khu vực</string>
    <string name="address_type">Loại địa chỉ</string>
    <string name="please_select_address_type">Vui lòng chọn loại địa chỉ</string>
    <string name="edit">Sửa</string>
    <string name="my_cart">Giỏ hàng của tôi</string>
    <string name="price_detail">Chi tiết giá</string>
    <string name="item_price_detail">Chi tiết giá mặt hàng</string>
    <string name="order_price_detail">Chi tiết giá đặt hàng</string>
    <string name="delivery">Vận chuyển</string>
    <string name="quantity">Số lượng</string>
    <string name="amount_payable">Số tiền phải trả</string>
    <string name="price">Giá bán</string>
    <string name="items">mặt hàng</string>
    <string name="place_order">Đặt hàng</string>
    <string name="change_and_add_address">Thay đổi hoặc thêm địa chỉ</string>
    <string name="add_new_address">+ Thêm địa chỉ mới</string>
    <string name="delivery_here">GIAO HÀNG TẠI ĐÂY</string>
    <string name="apply_coupon_code">Áp dụng mã phiếu thưởng</string>
    <string name="coupons">Phiếu giảm giá</string>
    <string name="coupons_detail">Chi tiết phiếu giảm giá</string>
    <string name="apply_now">Áp dụng ngay bây giờ</string>
    <string name="order_summery">Tóm tắt theo thứ tự</string>
    <string name="text_continue">Tiếp tục</string>
    <string name="select_address">Chọn địa chỉ</string>
    <string name="minimum_order_value_one">Giá trị đặt hàng tối thiểu một</string>
    <string name="max_value">Tối đa</string>
    <string name="purchase_item">mua hàng</string>
    <string name="discount_coupons">Phiếu giảm giá</string>
    <string name="logout_message">Bạn có chắc chắn bạn muốn thoát ?</string>
    <string name="cancel">Hủy bỏ</string>
    <string name="delete_msg">Bạn có chắc chắn muốn xóa không</string>
    <string name="please_select_size">Xin vui lòng chọn kích cỡ</string>
    <string name="write_review">Viết nhận xét</string>
    <string name="add_image">Thêm hình ảnh</string>
    <string name="please_rating">Vui lòng xếp hạng tối thiểu một</string>
    <string name="product_review">Xem xét sản phẩm</string>
    <string name="please_enter_review">Vui lòng nhập đánh giá</string>
    <string name="brand">Nhãn hiệu</string>
    <string name="order_detail">Chi tiết đặt hàng</string>
    <string name="selling_price">Gia bán</string>
    <string name="discount">Miễn giảm</string>
    <string name="total_price">Tổng giá</string>
    <string name="contact_us">Liên hệ chúng tôi</string>
    <string name="your_message">Tin nhắn của bạn</string>
    <string name="subject">Chủ đề</string>
    <string name="offer">Ưu đãi</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="system_default">Mặc định hệ thống</string>
    <string name="Cancel_them">Huỷ bỏ</string>
</resources>