<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        android:layout_margin="20dp"
        app:cardBackgroundColor="@color/card_bg_them">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="25dp"
            android:paddingBottom="15dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">

            <RadioGroup
                android:id="@+id/radioGroup_them"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="3">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radioButton_system_them"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/system_default"
                    android:textColor="@color/textView_them"
                    app:buttonTint="@color/textView_app_color" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radioButton_light_them"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/light"
                    android:textColor="@color/textView_them"
                    app:buttonTint="@color/textView_app_color" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radioButton_dark_them"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/dark"
                    android:textColor="@color/textView_them"
                    app:buttonTint="@color/textView_app_color" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:gravity="end">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textView_ok_them"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/ok"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/textView_app_color" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textView_cancel_them"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:layout_marginStart="25dp"
                    android:text="@string/Cancel_them"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/textView_app_color" />

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>