<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="50dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/welcome_back"
            android:textColor="@color/textView_login"
            android:textSize="26sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_into_continue"
            android:textColor="@color/textView_sub_login"
            android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_email_new" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/email"
                android:textColor="@color/subTextColor"
                android:textSize="14sp" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_email_login_activity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@color/transparent"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="@color/textView_sub_login"
            android:textSize="16sp"
            android:theme="@style/editText_style"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"/>

    </LinearLayout>

        <include
            layout="@layout/login_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_password_new" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/password"
                android:textColor="@color/subTextColor"
                android:textSize="14sp" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_password_login_activity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@color/transparent"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/textView_sub_login"
            android:textSize="16sp"
            android:theme="@style/editText_style"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"/>

    </LinearLayout>

        <include
            layout="@layout/login_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <cn.refactor.library.SmoothCheckBox
                android:id="@+id/checkbox_login_activity"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                app:color_checked="@color/check_box_check_bg_login"
                app:color_tick="@color/check_box_tick_login"
                app:color_unchecked="@color/check_box_bg_login"
                app:color_unchecked_stroke="@color/check_box_circle_login" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:text="@string/remember_me"
                android:textColor="@color/textView_sub_login"/>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_login_activity"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginHorizontal="24dp"
            android:text="@string/button_text_login"
            android:textColor="@color/textView_button_login"
            android:textSize="16sp"
            app:backgroundTint="@color/buttonColor"
            app:elevation="8dp"
            android:layout_marginTop="24dp"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView_forget_password_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/forget_password"
            android:textColor="@color/highlightTextColor"
            android:textSize="14sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView_skip_login_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_text_skip"
                android:textColor="@color/textView_login"
                android:textStyle="bold"
                app:backgroundTint="@color/skip_login"
                android:textSize="14sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:id="@+id/linearLayout_google_login"
                android:layout_width="0dp"
                android:layout_height="58dp"
                android:layout_weight="1"
                android:background="@drawable/button_google_bg"
                android:gravity="center"
                android:padding="5dp">

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/google_ic" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="@string/google_login"
                    android:textColor="@color/subTextColor"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <FrameLayout
                android:id="@+id/frameLayout_login"
                android:layout_width="0dp"
                android:layout_height="58dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_google_bg"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/facebook_ic" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:text="@string/facebook_login"
                        android:textColor="@color/subTextColor"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:layout_marginTop="18dp"
            android:orientation="horizontal">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkbox_terms_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:checked="true"
                android:minHeight="0dp"
                android:theme="@style/checkBoxStyle" />

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/flexbox_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                app:alignContent="stretch"
                app:alignItems="stretch"
                app:flexWrap="wrap">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textView_titleTerms_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/terms_title"
                    android:textColor="@color/textView_login"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textView_terms_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/terms_of_use"
                    android:textColor="@color/textView_app_color"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </com.google.android.flexbox.FlexboxLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="50dp"
            android:layout_weight="1"
            android:gravity="center_horizontal|bottom"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dont_have_an_account_yet"
                    android:textColor="@color/textView_sub_login"
                    android:textSize="16sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textView_signup_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/signUp"
                    android:textColor="@color/highlightTextColor"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

            </LinearLayout>

            <View
                android:layout_width="100dp"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:background="@color/textView_app_color" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>