<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:background="@color/header_bg_nav">

    <RelativeLayout
        android:id="@+id/rel_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageView_nav"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/user_profile"
            app:civ_border_color="@color/imageView_border_nav"
            app:civ_border_width="2dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="15dp"
            android:layout_toEndOf="@+id/imageView_nav"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView_name_nav"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/nav_title"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView_email_nav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/nav_sub_title"
                android:textColor="@color/whiteOpacity"
                android:textSize="10sp" />

        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>